README.md file update.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <form>
 
             <input type="text" name="username" placeholder="primer nombre">
-            <p>Nombre debe contener de 5 - 12 caracteres</p>
+            <p>Primer nombre debe contener de 5 - 12 caracteres</p>
 
             <input type="text" name="email" placeholder="correo">
             <p>Correo debe ser una dirección válida, ej. yo@dominio.com</p>
